2007-05-28  Vincent Untz  <vuntz@gnome.org>

	Backport from HEAD.

	* panel-ditem-editor.c: (panel_ditem_editor_setup_ui): always put
	initial focus on the name entry
	Fix part of bug #440690

2007-05-28  Vincent Untz  <vuntz@gnome.org>

	Backport from HEAD.

	* launcher.c: (panel_launcher_create_with_id): if we have a file URI,
	we need to unescape the URI before putting the filename in gconf,
	since the file on disk is unescaped.
	Fix bug #432942

2007-05-28  Vincent Untz  <vuntz@gnome.org>

	Backport from HEAD.

	* panel-run-dialog.glade: fix alignment of the run button again, and
	use markup for the label in there

==================== 2.18.1 ====================

2007-04-10  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_lock_screen_action_get_command): if EUID is 0,
	return NULL if the user wants to lock the screen: gnome-screensaver
	and xscreensaver don't support root locking the screen.
	Fix bug #424545.

2007-04-10  Vincent Untz  <vuntz@gnome.org>

	* panel-run-dialog.c: (panel_run_dialog_destroy): call
	panel_run_dialog_disconnect_pixmap()
	(panel_run_dialog_disconnect_pixmap): new function, to disconnect
	signals
	Fix bug happening because we get a screen_changed signal when the
	widget is destroyed and the data read in the handler has already been
	freed.
	Fix bug #413921. Patch by Ray Strode <rstrode@redhat.com>

2007-04-10  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_error_dialog): don't use the error message as a
	format string.
	Fix bug #418186. Patch by Chris Wilson <chris@chris-wilson.co.uk>

2007-03-15  Vincent Untz  <vuntz@gnome.org>

	* gnome-panel.desktop.in: fix NoDisplay value to be valid

==================== 2.18.0 ====================

2007-03-06  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: install gnome-panel.desktop for bug-buddy
	* gnome-panel/gnome-panel.desktop.in: new
	Fix bug #382584

2007-03-05  Vincent Untz  <vuntz@gnome.org>

	* panel-run-dialog.glade: fix alignment of a button. This is not a UI