@@ -2,6 +2,14 @@
 
 	Backport from HEAD.
 
+	* panel-run-dialog.c: (program_list_selection_changed): don't reset
+	visibility of all programs in the program list. And beautify the code.
+	Fix bug #339963
+
+2007-05-28  Vincent Untz  <vuntz@gnome.org>
+
+	Backport from HEAD.
+
 	* panel-ditem-editor.c: (panel_ditem_editor_setup_ui): always put
 	initial focus on the name entry
 	Fix part of bug #440690
